--- a/client/src/components/Navbar/navbar.css
+++ b/client/src/components/Navbar/navbar.css
@@ -5,7 +5,7 @@
     justify-content: space-around
 }
 .btn-logout{ height: 60px;
-    margin-top: 5px;
+    
 }   
 .btn-gym {
     background-image: linear-gradient( #4c9eaf, grey); 
@@ -21,9 +21,8 @@
   transition: background-color 0.3s ease, transform 0.2s ease; 
   }
   
-.l{
-    margin-left: 40px;
- max-height: 50px;
+.l{ 
+height: 50px;
 }
 .s{
     margin-left: 40px;
