--- a/client/src/components/Home/home.css
+++ b/client/src/components/Home/home.css
@@ -10,3 +10,12 @@ background-repeat: no-repeat;
 background-size:cover;
 background-position: center;
 }
+.footer{
+  background-color: black;
+  color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 60px;
+  width: 100%;
+}
