--- a/client/src/components/Home/home.css
+++ b/client/src/components/Home/home.css
@@ -11,11 +11,13 @@ background-size:cover;
 background-position: center;
 }
 .footer{
-  background-color: black;
+  background-color: #000000cc;
+  position: fixed;
+  bottom: 0px;
   color: white;
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 60px;
+  height:40px;
   width: 100%;
 }
